cmake_minimum_required(VERSION 3.0.0)

# algorithm
add_executable(test_algorithm
    main_algorithm.cpp
)

target_include_directories(test_algorithm PUBLIC
    ${CMAKE_SOURCE_DIR}/all.hpp
)

# algorithm_2
add_executable(test_algorithm_2
    main_algorithm_2.cpp
)

target_include_directories(test_algorithm_2 PUBLIC
    ${CMAKE_SOURCE_DIR}/all.hpp
)

# algorithm_3
add_executable(test_algorithm_3
    main_algorithm_3.cpp
)

target_include_directories(test_algorithm_3 PUBLIC
    ${CMAKE_SOURCE_DIR}/all.hpp
)

# algorithm_4
add_executable(test_algorithm_4
    main_algorithm_4.cpp
)

target_include_directories(test_algorithm_4 PUBLIC
    ${CMAKE_SOURCE_DIR}/all.hpp
)

# algorithm_5
add_executable(test_algorithm_5
    main_algorithm_5.cpp
)

target_include_directories(test_algorithm_5 PUBLIC
    ${CMAKE_SOURCE_DIR}/all.hpp
)

# algorithm_6
add_executable(test_algorithm_6
    main_algorithm_6.cpp
)

target_include_directories(test_algorithm_6 PUBLIC
    ${CMAKE_SOURCE_DIR}/all.hpp
)

# algorithm_7
add_executable(test_algorithm_7
    main_algorithm_7.cpp
)

target_include_directories(test_algorithm_7 PUBLIC
    ${CMAKE_SOURCE_DIR}/all.hpp
)

# algorithm_8
add_executable(test_algorithm_8
    main_algorithm_8.cpp
)

target_include_directories(test_algorithm_8 PUBLIC
    ${CMAKE_SOURCE_DIR}/all.hpp
)

# algorithm_9
add_executable(test_algorithm_9
    main_algorithm_9.cpp
)

target_include_directories(test_algorithm_9 PUBLIC
    ${CMAKE_SOURCE_DIR}/all.hpp
)
